# litellm

./: README.md
myproject/: pyproject.toml
myproject/src/myproject/: hello.py
