[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abu Bakar", email = "abubakarbinzohaib@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.59.1",
]

[project.scripts]
gemini2 = "myproject.hello:gemini2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"